--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -6,6 +6,11 @@
 	<meta charset=“UTF-8”>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+
+	<link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='favicon_io/apple-touch-icon.png') }}">
+	<link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='favicon_io/favicon-32x32.png') }}">
+	<link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='favicon_io/favicon-16x16.png') }}">
+	<link rel="manifest" href="{{ url_for('static', filename='favicon_io/site.webmanifest') }}">
 </head>
 
 <body>
@@ -111,12 +116,12 @@
 	<footer>
 		<div class="social-links">
 			<div class="social-link">
-				<a href="https://twitter.com" class="highlightit">
+				<a href="https://twitter.com/sfbaysafetoswim" class="highlightit">
 					<img src="{{url_for('static', filename='twitter.svg')}}" />
 				</a>
 			</div>
 			<div class="social-link">
-				<a href="https://twitter.com" class="highlightit">
+				<a href="mailto: sfbayswim@gmail.com" class="highlightit">
 					<img src="{{url_for('static', filename='gmail.svg')}}"/>
 				</a>
 			</div>
