--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -4,6 +4,7 @@
 <head>
 	<title> SF Bay Water Quality - Safe to Swim</title>
 	<meta charset=“UTF-8”>
+	<meta name="description" content="Easy to read water quality report for the San Francisco Bay Area.">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 
