--- a/static/style.css
+++ b/static/style.css
@@ -12,6 +12,7 @@ h1 {
 h2 {
 	font-weight: 400;
 	text-decoration: underline;
+	text-align: center;
 }
 
 p {
@@ -29,6 +30,10 @@ ul {
 	margin-left: 25px;
 	margin-right: 45px;
 	list-style-type: none;
+}
+
+footer {
+	clear: both;
 }
 
 #header {
@@ -89,13 +94,13 @@ ul {
 }
 
 .active, .collapse:hover {
-  background-color: #ccc;
+/*  background-color: #ccc;*/
 }
 
-.expand {
-  padding: 0 18px;
+#expand-1 {
+/*  padding: 0 18px;
   display: none;
-  overflow: hidden;
+  overflow: hidden;*/
 }
 
 .location-content {
@@ -104,7 +109,6 @@ ul {
 
 .social-links {
 	margin: auto;
-	padding-top: 7%;
 	width: 100%;
 	text-align: center;
 	position: static;
