--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -12,6 +12,8 @@
 	<link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='favicon_io/favicon-32x32.png') }}">
 	<link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='favicon_io/favicon-16x16.png') }}">
 	<link rel="manifest" href="{{ url_for('static', filename='favicon_io/site.webmanifest') }}">
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -33,8 +35,8 @@
 				<div class="map">
 					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3154.3637510733533!2d-122.2614236490818!3d37.75806822079424!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808f86b167e16e0d%3A0x1a1e5e44836f21cc!2s2001%20Shore%20Line%20Dr%2C%20Alameda%2C%20CA%2094501!5e0!3m2!1sen!2sus!4v1625697557182!5m2!1sen!2sus" width="75%" height="90%" style="border:0.5;" allowfullscreen="" loading="lazy"></iframe>
 				</div>
-				<button type="button" class="collapse">Measurement Details</button>
-					<div class="expand">
+				<button type="button" id="collapse-1" aria-expanded="false">Measurement Details</button>
+					<div id="expand-1" hidden="">
 						<p>Analyte: {{al_ent_analyte}}</p>
 						<p>Result: {{al_ent_result}} {{al_ent_unit}}</p>
 						<p>Sample Location: {{al_ent_stat_code}}</p>
@@ -65,8 +67,8 @@
 				<div class="map">
 					<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12609.209496231953!2d-122.4235308!3d37.8063859!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7cec836886978844!2sAquatic%20Park!5e0!3m2!1sen!2sus!4v1625800235047!5m2!1sen!2sus" width="75%" height="90%" style="border:0.5;" allowfullscreen="" loading="lazy"></iframe>
 				</div>
-				<button type="button" class="collapse">Measurement Details</button>
-					<div class="expand">
+				<button type="button" id="collapse-2" aria-expanded="false">Measurement Details</button>
+					<div id="expand-2" hidden="">
 						<p>Analyte: {{ap_col_t_analyte}}</p>
 						<p>Result: {{ap_col_t_result}} {{ap_col_t_unit}}</p>
 						<p>Sample Location: {{ap_col_t_stat_code}}</p>
@@ -112,10 +114,24 @@
 					</ul>	
 				</div>
 			</div>
+			<div class="bubble">
+				<h2> Say Hello 	&#x1F44B;</h2>
+				<div class="social-links">
+					<div class="social-link">
+						<a href="https://twitter.com/sfbaysafetoswim" class="highlightit">
+							<img src="{{url_for('static', filename='twitter.svg')}}" />
+						</a>
+					</div>
+					<div class="social-link">
+						<a href="mailto: sfbayswim@gmail.com" class="highlightit">
+							<img src="{{url_for('static', filename='gmail.svg')}}"/>
+						</a>
+					</div>
+				</div>
 		</div>
 	</div>
 	<footer>
-		<div class="social-links">
+<!-- 		<div class="social-links">
 			<div class="social-link">
 				<a href="https://twitter.com/sfbaysafetoswim" class="highlightit">
 					<img src="{{url_for('static', filename='twitter.svg')}}" />
@@ -126,7 +142,7 @@
 					<img src="{{url_for('static', filename='gmail.svg')}}"/>
 				</a>
 			</div>
-		</div>
+		</div> -->
 		<div id="footer-love">
 			<p> Made by Scott. Enjoy the Bay!</p>
 			<p> Copyright 2021 </p>
@@ -135,18 +151,55 @@
 </body>
 
 <script>
-var coll = document.getElementsByClassName("collapse");
-var i;
+(function () {
+  $(document).ready(function () {
+    var $button1, $button2, $expand1, $expand2
+    $button1 = $('#collapse-1')
+    $button2 = $('#collapse-2')
+    $expand1 = $('#expand-1')
+    $expand2 = $('#expand-2')
+    return $button1.click(() => {
+      if ($expand1.attr('hidden') === 'hidden' && $expand2.attr('hidden') === 'hidden')  {
+      	console.log("test1a", $expand2.attr('hidden'))
+        $expand1.removeAttr('hidden')
+        return $button1.attr('aria-expanded', true)
+      } else if ($expand1.attr('hidden') === 'hidden' && $expand2.attr('hidden') != 'hidden') {
+      	console.log("test", $expand2.attr('hidden'))
+        $expand1.removeAttr('hidden')
+        $button1.attr('aria-expanded', true)
+        $expand2.attr('hidden', true)
+        return $button2.attr('aria-expanded', false)
+      } else {
+        $expand1.attr('hidden', true)
+        return $button1.attr('aria-expanded', false)
+      }
+    })
+  })
+}.call(this));
 
-for (i = 0; i < coll.length; i++) {
-  coll[i].addEventListener("click", function() {
-    this.classList.toggle("active");
-    var content = this.nextElementSibling;
-    if (content.style.display === "block") {
-      content.style.display = "none";
-    } else {
-      content.style.display = "block";
-    }
-  });
-}
+(function () {
+  $(document).ready(function () {
+    var $button1, $button2, $expand1, $expand2
+    $button1 = $('#collapse-1')
+    $button2 = $('#collapse-2')
+    $expand1 = $('#expand-1')
+    $expand2 = $('#expand-2')
+    return $button2.click(() => {
+      if ($expand2.attr('hidden') === 'hidden' && $expand1.attr('hidden') != 'hidden') {
+      	$expand2.removeAttr('hidden')
+        $button2.attr('aria-expanded', false)
+        $expand1.attr('hidden', true)
+        return $button1.attr('aria-expanded', false)
+      } else if ($expand2.attr('hidden') === 'hidden') {
+        $expand2.removeAttr('hidden')
+        return $button2.attr('aria-expanded', true)
+      } else {
+      	console.log("test3")
+        $expand2.attr('hidden', true)
+        return $button2.attr('aria-expanded', false)
+      }
+    })
+  })
+}.call(this));
+
 </script>
