--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -14,6 +14,13 @@
 	<link rel="manifest" href="{{ url_for('static', filename='favicon_io/site.webmanifest') }}">
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script type="text/javascript">
+(function(f,b){if(!b.__SV){var e,g,i,h;window.mixpanel=b;b._i=[];b.init=function(e,f,c){function g(a,d){var b=d.split(".");2==b.length&&(a=a[b[0]],d=b[1]);a[d]=function(){a.push([d].concat(Array.prototype.slice.call(arguments,0)))}}var a=b;"undefined"!==typeof c?a=b[c]=[]:c="mixpanel";a.people=a.people||[];a.toString=function(a){var d="mixpanel";"mixpanel"!==c&&(d+="."+c);a||(d+=" (stub)");return d};a.people.toString=function(){return a.toString(1)+".people (stub)"};i="disable time_event track track_pageview track_links track_forms track_with_groups add_group set_group remove_group register register_once alias unregister identify name_tag set_config reset opt_in_tracking opt_out_tracking has_opted_in_tracking has_opted_out_tracking clear_opt_in_out_tracking start_batch_senders people.set people.set_once people.unset people.increment people.append people.union people.track_charge people.clear_charges people.delete_user people.remove".split(" ");
+for(h=0;h<i.length;h++)g(a,i[h]);var j="set set_once union unset remove delete".split(" ");a.get_group=function(){function b(c){d[c]=function(){call2_args=arguments;call2=[c].concat(Array.prototype.slice.call(call2_args,0));a.push([e,call2])}}for(var d={},e=["get_group"].concat(Array.prototype.slice.call(arguments,0)),c=0;c<j.length;c++)b(j[c]);return d};b._i.push([e,f,c])};b.__SV=1.2;e=f.createElement("script");e.type="text/javascript";e.async=!0;e.src="undefined"!==typeof MIXPANEL_CUSTOM_LIB_URL?
+MIXPANEL_CUSTOM_LIB_URL:"file:"===f.location.protocol&&"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js".match(/^\/\//)?"https://cdn.mxpnl.com/libs/mixpanel-2-latest.min.js":"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js";g=f.getElementsByTagName("script")[0];g.parentNode.insertBefore(e,g)}})(document,window.mixpanel||[]);
+	mixpanel.init('8e7134b9b544cfbcd6b75d4e8b458d85');
+	mixpanel.track("Home Page View");
+</script>
 </head>
 
 <body>
@@ -160,11 +167,11 @@
     $expand2 = $('#expand-2')
     return $button1.click(() => {
       if ($expand1.attr('hidden') === 'hidden' && $expand2.attr('hidden') === 'hidden')  {
-      	console.log("test1a", $expand2.attr('hidden'))
+        mixpanel.track("Viewed Measurement Details", {"Testing Location": "Crown 2001 Shoreline"})
         $expand1.removeAttr('hidden')
         return $button1.attr('aria-expanded', true)
       } else if ($expand1.attr('hidden') === 'hidden' && $expand2.attr('hidden') != 'hidden') {
-      	console.log("test", $expand2.attr('hidden'))
+        mixpanel.track("Viewed Measurement Details", {"Testing Location": "Crown 2001 Shoreline"})
         $expand1.removeAttr('hidden')
         $button1.attr('aria-expanded', true)
         $expand2.attr('hidden', true)
@@ -186,15 +193,16 @@
     $expand2 = $('#expand-2')
     return $button2.click(() => {
       if ($expand2.attr('hidden') === 'hidden' && $expand1.attr('hidden') != 'hidden') {
+      	mixpanel.track("Viewed Measurement Details", {"Testing Location": "Aquatic Park"})
       	$expand2.removeAttr('hidden')
         $button2.attr('aria-expanded', false)
         $expand1.attr('hidden', true)
         return $button1.attr('aria-expanded', false)
       } else if ($expand2.attr('hidden') === 'hidden') {
+      	mixpanel.track("Viewed Measurement Details", {"Testing Location": "Aquatic Park"})
         $expand2.removeAttr('hidden')
         return $button2.attr('aria-expanded', true)
       } else {
-      	console.log("test3")
         $expand2.attr('hidden', true)
         return $button2.attr('aria-expanded', false)
       }
