Adding Manual Alerting

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -30,6 +30,10 @@ MIXPANEL_CUSTOM_LIB_URL:"file:"===f.location.protocol&&"//cdn.mxpnl.com/libs/mix
   <div id="body-content">
     <div id="results">
       <div class="bubble">
+        <h2>Active Alerts</h2>
+        {% include 'alerts.html' %}
+      </div>
+      <div class="bubble">
         <div class="location-content">
         <h2>Alameda</h2>
         <div class="result-summary-1">
