--- a/static/style.css
+++ b/static/style.css
@@ -11,20 +11,29 @@ h1 {
 }
 
 h2 {
-	font-weight: 400;
-	text-decoration: underline;
+	font-weight: 200;
+	/*text-decoration: underline;*/
+	color: #5F5F5F;
 	text-align: center;
+}
+
+h3 {
+	color: #5F5F5F;
 }
 
 p {
 	margin-top: 10px;
 	margin-bottom: 10px;
+	margin-left: 10px;
+    margin-right: 10px;
+	font-weight: lighter;
 }
 
 li {
 	text-align: left;
 	margin-top: 4px;
 	margin-bottom: 4px;
+	font-weight: lighter;
 }
 
 ul {
@@ -65,8 +74,6 @@ footer {
 	padding-bottom: 10px;
 	margin-bottom: 25px;
 	margin-top: 30px;
-	margin-left: 25px;
-	margin-right: 25px;
 	border: 1px solid #8ED3B4;
 	font-family: Helvetica;
 }
@@ -75,6 +82,7 @@ footer {
 	width: 35%;
 	float: left;
 	padding-top: 1px;
+	margin-left: 2%;
 }
 
 .result-summary-1{
@@ -87,8 +95,9 @@ footer {
 
 #overview {
 	padding-top: 2px;
-	margin-left: 37%;
 	width: 60%;
+	margin-right: 2%;
+    margin-left: auto;
 }
 
 .map {
@@ -157,6 +166,7 @@ a:hover { text-decoration: none; color:#236E2F; }
         float: none; 
         width: 100%;
         margin-top: 25%;
+        margin-left: 0px;
     }
 
     #overview {
