--- a/templates/alerts.html
+++ b/templates/alerts.html
@@ -1,7 +1,13 @@
-<div id="alerts">
+<!-- <div id="alerts">
 	<p>&#x1F7E2; Alameda: <b><a href="https://www.ebparks.org/about/stewardship/water/crown_beach_water_quality.htm">None</a></b><p>
 	<p>&#x1F7E2; San Francisco: <b><a href="https://webapps.sfpuc.org/sapps/beachesandbay.html">None</a></b></p>
 	<p>Last Updated on 2021-12-08</p>
+</div> -->
+
+<div id="alerts">
+	<p>&#x26A0; Alameda: <b><a href="https://www.ebparks.org/about/stewardship/water/crown_beach_water_quality.htm">Active Advisories at Crown Beach</a></b><p>
+	<p>&#x1F7E2; San Francisco: <b><a href="https://webapps.sfpuc.org/sapps/beachesandbay.html">None</a></b></p>
+	<p>Last Updated on 2021-12-09</p>
 </div>
 
 <!-- <div id="alerts">
