--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -27,7 +27,7 @@ MIXPANEL_CUSTOM_LIB_URL:"file:"===f.location.protocol&&"//cdn.mxpnl.com/libs/mix
 
 <body>
   <div id="header">
-    <h1>- san francisco bay - safe to swim data -</h1>
+    <h1>- San Francisco Bay - Safe to Swim Data -</h1>
   </div>
   <div id="body-content">
     <div id="results">
@@ -88,7 +88,7 @@ MIXPANEL_CUSTOM_LIB_URL:"file:"===f.location.protocol&&"//cdn.mxpnl.com/libs/mix
             <img src="{{url_for('static', filename='swimbug_blank.png')}}"/>
           </div>
           <h2>About This Page</h2>
-          <p> sfbayswim.info presents water quality data from California's open databases, surfaces active water quality advisories, and shares extra information regarding the San Francisco Bay. Use this website to gain quick insight into conditions before heading out to enjoy the beautiful bay. 
+          <p> sfbayswim.info presents water quality data from California's open databases, highlights active water quality advisories, and shares extra information regarding the San Francisco Bay. Use this website to gain quick insight into conditions before heading out to enjoy the beautiful bay. 
           </p>
           <h3> Tide and Weather </h3>
           <div id="tides">
@@ -99,12 +99,14 @@ MIXPANEL_CUSTOM_LIB_URL:"file:"===f.location.protocol&&"//cdn.mxpnl.com/libs/mix
           </div>
           <h3> Check the Details </h3>
           <p>Use the water quality charts to understand recent trends. Rely on active alerts provided by the reporting agencies to gauge real-time water quality.
+          <h3> Why Care About Recreating in Dirty Water? </h3>
+          <p>According to the Environmental Protection Agency (EPA), "Swimming at beaches with pollution in the water or in the sand can make you ill". In short, it is important to track water quality in order to make informed decisions about your water recreation. <a href="https://www.epa.gov/beaches/learn-what-affects-human-health-beach#:~:text=The%20most%20common%20illness%20associated,%2C%20diarrhea%2C%20headache%20or%20fever."><b>The EPA has addition information here.</b></a></p>
           <h3> Carefully Consider </h3>
           <p> There are <b>many</b> factors to consider when looking at the data. Some important ones include the date the sample was taken, the location of the sample, and what analytes the sample detects. </p>
           <ul>
             <li>&#x1F4C5; <b>Sample Date</b> - Agencies do not pull samples daily. Realize that the data can be old. </li>
-            <li>&#x1F30D; <b>Location</b> - Water quality can vary greatly in close areas. While one area's water quality can match the quality in a neighboring area, it is also possible that they aren't the same. </li>
-            <li>&#x1F9A0; <b>Analytes</b> - There are many microorganisms and pollutants in the water. Many can make you ill. The charts only looks at E. Coli, Enterococcus, and Coliforms. </li>
+            <li>&#x1F30D; <b>Location</b> - Water quality can vary between two nearby areas. While data collected at one location may be a good representation of water quality in nearby areas, it is also possible for there to be large differences. </li>
+            <li>&#x1F9A0; <b>Bacteria Types</b> - There are many microorganisms and pollutants in the San Francisco Bay. Many can make you ill. This site only analyzes at E. Coli, Enterococcus, and Coliforms. </li>
           </ul>
           <h3> Helpful + Cool Links </h3>
           <ul>
@@ -145,7 +147,7 @@ MIXPANEL_CUSTOM_LIB_URL:"file:"===f.location.protocol&&"//cdn.mxpnl.com/libs/mix
     </div> -->
     <div id="footer-love">
       <p> Made by Scott. Enjoy the Bay!</p>
-      <p> Copyright 2021 </p>
+      <p> Copyright 2022 </p>
     </div>
   </footer>
 </body>
