--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -33,8 +33,8 @@ MIXPANEL_CUSTOM_LIB_URL:"file:"===f.location.protocol&&"//cdn.mxpnl.com/libs/mix
     <div id="results">
       <div class="bubble">
         <h2>Current Conditions (NOAA Data)</h2>
-        <iframe src="https://www.ndbc.noaa.gov/widgets/station_page.php?station=AAMC1" style="border: hidden thin #3366ff; width:250px; height:274px; overflow: hidden;" scrolling="no"></iframe>
-        <iframe src="https://www.ndbc.noaa.gov/widgets/station_page.php?station=FTPC1" style="border: hidden thin #3366ff; width:250px; height:270px; overflow: hidden" scrolling="no"></iframe>
+        <iframe id="alameda-noaa" src="https://www.ndbc.noaa.gov/widgets/station_page.php?station=AAMC1" scrolling="no"></iframe>
+        <iframe id="sf-noaa" src="https://www.ndbc.noaa.gov/widgets/station_page.php?station=FTPC1" scrolling="no"></iframe>
       </div>
       <div class="bubble">
         <h2>Active Water Quality Alerts</h2>
