--- a/static/style.css
+++ b/static/style.css
@@ -179,6 +179,20 @@ filter:progid:DXImageTransform.Microsoft.Alpha(opacity=100);
 opacity: 1;
 }
 
+#alameda-noaa {
+	border: hidden thin #3366ff;
+	width:250px;
+	height:274px;
+	overflow: hidden;
+}
+
+#sf-noaa {
+	border: hidden thin #3366ff;
+	width:250px;
+	height:270px;
+	overflow: hidden;
+}
+
 a { 
 	color:#000000;
 	text-decoration: none;
@@ -202,11 +216,36 @@ a:hover { text-decoration: none; color:#236E2F; }
         width: 100%;
         margin-left: 0%;
     }
+
     h1 {
     	margin-top: 2px;
     }
+
     #header {
     	height: 64px;
     }
+
+    #sf-noaa {
+		border: hidden thin #3366ff;
+		width:250px;
+		height:272px;
+		overflow: hidden;
+	}
+}
+
+@-moz-document url-prefix() {
+	#alameda-noaa {
+		border: hidden thin #3366ff;
+		width:250px;
+		height:268px;
+		overflow: hidden;
+	}
+
+	#sf-noaa {
+		border: hidden thin #3366ff;
+		width:250px;
+		height:252px;
+		overflow: hidden;
+	}
 }
 
