--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -111,7 +111,7 @@ MIXPANEL_CUSTOM_LIB_URL:"file:"===f.location.protocol&&"//cdn.mxpnl.com/libs/mix
           <ul>
             <li>&#x1F4C5; <b>Sample Date</b> - Agencies do not pull samples daily. Realize that the data can be old. </li>
             <li>&#x1F30D; <b>Location</b> - Water quality can vary between two nearby areas. While data collected at one location may be a good representation of water quality in nearby areas, it is also possible for there to be large differences. </li>
-            <li>&#x1F9A0; <b>Bacteria Types</b> - There are many microorganisms and pollutants in the San Francisco Bay. Many can make you ill. This site only analyzes at E. Coli, Enterococcus, and Coliforms. </li>
+            <li>&#x1F9A0; <b>Bacteria Types</b> - There are many microorganisms and pollutants in the San Francisco Bay. Many can make you ill. This site only accounts for E. Coli, Enterococcus, and Coliform analyses. </li>
           </ul>
           <h3> Helpful + Cool Links </h3>
           <ul>
