bridging server w/ github

--- a/templates/alerts.html
+++ b/templates/alerts.html
@@ -5,9 +5,9 @@
 </div> -->
 
 <div id="alerts">
-	<p>&#x26A0; Alameda: <b><a href="https://www.ebparks.org/about/stewardship/water/crown_beach_water_quality.htm">Active Advisories at Crown Beach</a></b><p>
-	<p>&#x1F7E2; San Francisco: <b><a href="https://webapps.sfpuc.org/sapps/beachesandbay.html">None</a></b></p>
-	<p>Last Updated on 2021-12-09</p>
+    <p>&#x26A0; Alameda: <b><a href="https://www.ebparks.org/about/stewardship/water/crown_beach_water_quality.htm">Active Advisory at Crab Cove</a></b><p>
+    <p>&#x1F7E2; San Francisco: <b><a href="https://webapps.sfpuc.org/sapps/beachesandbay.html">None</a></b></p>
+	<p>Last Updated on 04-18-2025</p>
 </div>
 
 <!-- <div id="alerts">
